--- a/index.html
+++ b/index.html
@@ -495,8 +495,9 @@
     myHeaders.append("Authorization", "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY4ODM1NDBjZjE5ZDJjNTM5N2ZhMGIzZSIsImlhdCI6MTc1MzkzNzQ1NSwiZXhwIjoxNzU0MDIzODU1fQ.X4t_4R1nWGuxG3eS0S8UaaFWub6Y7dh5ZIR6p4Vki-s");
     const userId = "6883540cf19d2c5397fa0b3e"
 
+    const API_BASE_URL = "https://1w10dfjm-5000.inc1.devtunnels.ms/"
 
-    // fetch(`http://localhost:5000/api/site/get-home-banner?userId=${userId}`)
+    // fetch(`${API_BASE_URL}api/site/get-home-banner?userId=${userId}`)
     //   .then((response) => response.json())
     //   .then((result) => {
     //     console.log("result banner:", result);
@@ -507,7 +508,7 @@
     //     const headingArray = result.heading || [];
 
     //     headingArray.forEach((_, index) => {
-    //       const imagePath = `http://localhost:5000/${result.image[index].replace(/\\/g, "/")}`;
+    //       const imagePath = `${API_BASE_URL}${result.image[index].replace(/\\/g, "/")}`;
 
     //       // Create HTML content
     //       const bannerHTML = `
@@ -544,12 +545,12 @@
     //   });
 
 
-    fetch(`http://localhost:5000/api/site/get-home-about-us?userId=${userId}`)
+    fetch(`$${API_BASE_URL}api/site/get-home-about-us?userId=${userId}`)
       .then((response) => response.json())
       .then((result) => {
         console.log("result home about us: ", result);
-        const imagePath1 = `http://localhost:5000/${result.image1.replace(/\\/g, "/")}`;
-        const imagePath2 = `http://localhost:5000/${result.image2.replace(/\\/g, "/")}`;
+        const imagePath1 = `${API_BASE_URL}${result.image1.replace(/\\/g, "/")}`;
+        const imagePath2 = `${API_BASE_URL}${result.image2.replace(/\\/g, "/")}`;
 
         document.getElementById("h-aboutus-photo-1").src = imagePath1
         document.getElementById("h-aboutus-photo-2").src = imagePath2
@@ -565,11 +566,11 @@
       )
       .catch((error) => console.error("Error fetching banner:", error));
 
-    fetch(`http://localhost:5000/api/site/get-home-section-2?userId=${userId}`)
+    fetch(`${API_BASE_URL}api/site/get-home-section-2?userId=${userId}`)
       .then((response) => response.json())
       .then((result) => {
-        const imagePath1 = `http://localhost:5000/${result.image1.replace(/\\/g, "/")}`;
-        const imagePath2 = `http://localhost:5000/${result.image2.replace(/\\/g, "/")}`;
+        const imagePath1 = `${API_BASE_URL}${result.image1.replace(/\\/g, "/")}`;
+        const imagePath2 = `${API_BASE_URL}${result.image2.replace(/\\/g, "/")}`;
         document.getElementById("g-services-2-image-1").src = imagePath1
         document.getElementById("h-services-2-description-main-tagline-1").textContent = result.tagline1
         document.getElementById("h-services-2-description-heading-1").textContent = result.heading1
@@ -590,11 +591,11 @@
       )
       .catch((error) => console.error("Error fetching banner:", error));
 
-    fetch(`http://localhost:5000/api/site/get-why-choose-us?userId=${userId}`)
+    fetch(`${API_BASE_URL}api/site/get-why-choose-us?userId=${userId}`)
       .then((response) => response.json())
       .then((result) => {
         console.log("result :", result)
-        const imagePath1 = `http://localhost:5000/${result.image.replace(/\\/g, "/")}`;
+        const imagePath1 = `${API_BASE_URL}${result.image.replace(/\\/g, "/")}`;
 
         document.getElementById("h-why-choose-us-tagline").textContent = result.tagline
         document.getElementById("h-why-choose-us-heading").textContent = result.Heading
@@ -609,7 +610,7 @@
       )
       .catch((error) => console.error("Error fetching banner:", error));
 
-    fetch(`http://localhost:5000/api/contact/Contact?userId=${userId}`)
+    fetch(`${API_BASE_URL}api/contact/Contact?userId=${userId}`)
       .then((response) => response.json())
       .then((result) => {
 
@@ -633,7 +634,7 @@
         // document.querySelector(".c-map-section").innerHTML = result.embadedMap;
       }).catch((error) => console.error("Error fetching Address:", error));
 
-    fetch(`http://localhost:5000/api/product/allService?userId=${userId}`)
+    fetch(`${API_BASE_URL}api/product/allService?userId=${userId}`)
       .then((response) => response.json())
       .then((result) => {
         // console.log("result.data :",result.data[0]);
@@ -644,7 +645,7 @@
           if (index < 3) {
             console.log("el1 :", el);
 
-            const imagePath = `http://localhost:5000/${el?.mainImage.replace(/\\/g, "/")}`;
+            const imagePath = `${API_BASE_URL}${el?.mainImage.replace(/\\/g, "/")}`;
 
 servicesSection.innerHTML += `
   <a href="services${index + 1}.html">
@@ -666,7 +667,7 @@ servicesSection.innerHTML += `
   </script>
 
   <script>
-    fetch(`http://localhost:5000/api/site/get-testimonial?userId=${userId}`)
+    fetch(`${API_BASE_URL}api/site/get-testimonial?userId=${userId}`)
       .then((response) => response.json())
       .then((result) => {
         console.log("testimonial result:", result);
@@ -677,7 +678,7 @@ servicesSection.innerHTML += `
         const names = result.name || [];
 
         names.forEach((_, index) => {
-          const imagePath = `http://localhost:5000/${result.images[index].replace(/\\/g, "/")}`;
+          const imagePath = `${API_BASE_URL}${result.images[index].replace(/\\/g, "/")}`;
           const reviewCount = parseInt(result.reviwes[index]) || 0;
           const maxStars = 5;
           const stars = "⭐".repeat(reviewCount) + "☆".repeat(maxStars - reviewCount);
@@ -768,7 +769,7 @@ servicesSection.innerHTML += `
   </script>
 
   <script>
-    fetch(`http://localhost:5000/api/site/get-home-banner?userId=${userId}`)
+    fetch(`${API_BASE_URL}api/site/get-home-banner?userId=${userId}`)
       .then((response) => response.json())
       .then((result) => {
         console.log("result banner:", result);
@@ -779,7 +780,7 @@ servicesSection.innerHTML += `
         const headingArray = result.heading || [];
 
         headingArray.forEach((_, index) => {
-          const imagePath = `http://localhost:5000/${result.image[index].replace(/\\/g, "/")}`;
+          const imagePath = `${API_BASE_URL}${result.image[index].replace(/\\/g, "/")}`;
 
           const bannerHTML = `
           <div class="h-banner-div" id="h-banner-${index}" style="
