--- a/services1.html
+++ b/services1.html
@@ -294,8 +294,10 @@
   const myHeaders = new Headers();
 const userId = "6883540cf19d2c5397fa0b3e"
 
+const API_BASE_URL = "https://1w10dfjm-5000.inc1.devtunnels.ms/"
 
-  fetch(`http://localhost:5000/api/product/allService?userId=${userId}`)
+
+  fetch(`${API_BASE_URL}api/product/allService?userId=${userId}`)
   .then((response) => response.json())
   .then((result) =>{
     console.log("result :",result);
@@ -312,11 +314,11 @@ const userId = "6883540cf19d2c5397fa0b3e"
   }
 )
 
-  fetch(`http://localhost:5000/api/product/Service1?userId=${userId}`)
+  fetch(`${API_BASE_URL}api/product/Service1?userId=${userId}`)
   .then((response) => response.json())
   .then((result) =>{
-    const image1 =  `http://localhost:5000/${result?.latestProduct?.mainImage.replace(/\\/g, "/")}`;
-    const image2 =  `http://localhost:5000/${result?.latestProduct?.section2Image.replace(/\\/g, "/")}`;
+    const image1 =  `${API_BASE_URL}${result?.latestProduct?.mainImage.replace(/\\/g, "/")}`;
+    const image2 =  `${API_BASE_URL}${result?.latestProduct?.section2Image.replace(/\\/g, "/")}`;
 
     document.getElementById("services-section-1-description-1").textContent = result.latestProduct.mainDescription
     document.getElementById("services-section-2-description-1").textContent = result.latestProduct.section2Description
