--- a/services5.html
+++ b/services5.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div id="loader-wrapper">
+  <span class="loader"></span>
+</div>
   <header class="header">
 
   </header>
@@ -258,74 +261,52 @@
 
   </footer>
 
-<script>
-  const hamburger = document.getElementById("hamburger");
-  const navMenu = document.getElementById("navMenu");
-  const overlay = document.getElementById("overlay");
-  const closeBtn = document.getElementById("closeNavBtn");
-
-  function openMobileNav() {
-    if (window.innerWidth <= 860) {
-      navMenu.classList.add("active");
-      overlay.classList.add("show");
-      overlay.classList.remove("hidden");
-    }
-  }
-
-  function closeMobileNav() {
-    navMenu.classList.remove("active");
-    overlay.classList.remove("show");
-    overlay.classList.add("hidden");
-  }
-
-  hamburger.addEventListener("click", openMobileNav);
-  closeBtn.addEventListener("click", closeMobileNav);
-  overlay.addEventListener("click", closeMobileNav);
-</script>
 
   <script>
-    let year = new Date
-    document.getElementById("year").textContent = year.getFullYear()
-  </script>
+    const loaderWrapper = document.getElementById('loader-wrapper');
 
-    <script>
-  const myHeaders = new Headers();
-const userId = "6883540cf19d2c5397fa0b3e"
+    const myHeaders = new Headers();
+    const userId = "6883540cf19d2c5397fa0b3e"
+    const API_BASE_URL = "https://1w10dfjm-5000.inc1.devtunnels.ms/"
 
-const API_BASE_URL = "https://1w10dfjm-5000.inc1.devtunnels.ms/"
+    // List of all fetch promises
+    const fetchPromises = [
+      fetch(`${API_BASE_URL}api/product/allService?userId=${userId}`).then(res => res.json()),
+      fetch(`${API_BASE_URL}api/product/Service5?userId=${userId}`).then(res => res.json())
+    ];
 
-  fetch(`${API_BASE_URL}api/product/allService`)
-  .then((response) => response.json())
-  .then((result) =>{
-    // console.log("result.data :",result.data[0]);
+    Promise.all(fetchPromises)
+      .then(results => {
+        console.log('All data loaded', results);
+        loaderWrapper.style.display = 'none';
 
-    result.data.map((el,index)=>{
-      console.log("el :",el);
+
+    results[0].data.forEach((el,index)=>{
       document.querySelectorAll(`.service${el.serviceType}-name`).forEach(innerEl => innerEl.textContent = el.name)
+
+
     })
-  }
-)
 
-  fetch(`${API_BASE_URL}api/product/Service5?userId=${userId}`)
-  .then((response) => response.json())
-  .then((result) =>{
-    const image1 =  `${API_BASE_URL}${result?.latestProduct?.mainImage.replace(/\\/g, "/")}`;
-    const image2 =  `${API_BASE_URL}${result?.latestProduct?.section2Image.replace(/\\/g, "/")}`;
+    // document.querySelectorAll(`.service1-name`).forEach(innerEl => innerEl.textContent = el.name)
 
-    document.getElementById("services-section-1-description-1").textContent = result.latestProduct.mainDescription
-    document.getElementById("services-section-2-description-1").textContent = result.latestProduct.section2Description
+        //all services
+    const MainServiceImage1 =  `${API_BASE_URL}${results[1]?.latestProduct?.mainImage.replace(/\\/g, "/")}`;
+    const MainServiceImage2 =  `${API_BASE_URL}${results[1]?.latestProduct?.section2Image.replace(/\\/g, "/")}`;
+
+    document.getElementById("services-section-1-description-1").textContent = results[1].latestProduct.mainDescription
+    document.getElementById("services-section-2-description-1").textContent = results[1].latestProduct.section2Description
 
     document.querySelector(".services-main-description-div").innerHTML = `
             <div class="services-main-div-section-1">
-          <img src="${image1}" alt="" id="services-section-1-image-1" class="services-section-1-image">
-          <p class="services-section-1-description" id="services-section-1-description-1">${result.latestProduct.mainDescription || "We offer a complete range of computer and laptop solutions—whether you're looking to buy a new or refurbished system, or need fast and reliable repair services. From budget-friendly models to high-performance machines, we help you choose the right device for your needs. Our expert technicians also provide professional support for hardware upgrades, software installations, virus removal, and system optimization. With quality products, expert advice, and dependable after-sales service, we’re your one-stop destination for all computer and laptop needs."}</p>
+          <img src="${MainServiceImage1}" alt="" id="services-section-1-image-1" class="services-section-1-image">
+          <p class="services-section-1-description" id="services-section-1-description-1">${results[1].latestProduct.mainDescription || "We offer a complete range of computer and laptop solutions—whether you're looking to buy a new or refurbished system, or need fast and reliable repair services. From budget-friendly models to high-performance machines, we help you choose the right device for your needs. Our expert technicians also provide professional support for hardware upgrades, software installations, virus removal, and system optimization. With quality products, expert advice, and dependable after-sales service, we’re your one-stop destination for all computer and laptop needs."}</p>
         </div>
 
         <div class="services-main-div-section-2">
           <div class="services-mian-div-section-2-1">
             <!-- <h3 id="services-section-2-heading-1" class="services-section-2-heading">Power up with a new battery
             </h3> -->
-            <p class="services-section-2-description" id="services-section-2-description-1">${result.latestProduct.section2Description || "Is your system running slower than usual or facing random freezes? Over time, laptops and desktops can develop performance issues due to outdated software, faulty components, or virus infections. Our professional computer and laptop service ensures your device performs smoothly and efficiently. We use high-quality parts and expertdiagnostics to deliver long-lasting results and system reliability."}
+            <p class="services-section-2-description" id="services-section-2-description-1">${results[1].latestProduct.section2Description || "Is your system running slower than usual or facing random freezes? Over time, laptops and desktops can develop performance issues due to outdated software, faulty components, or virus infections. Our professional computer and laptop service ensures your device performs smoothly and efficiently. We use high-quality parts and expertdiagnostics to deliver long-lasting results and system reliability."}
             </p>
           </div>
 
@@ -335,9 +316,9 @@ const API_BASE_URL = "https://1w10dfjm-5000.inc1.devtunnels.ms/"
                 <h4>01</h4>
                 <div class="services-section-2-list-description">
                   <h5 class="services-section-2-list-heading" id="services-section-2-list-heading-1-1">
-                    ${result.latestProduct.section2card1Title || "Signs you need a service"}</h5>
+                    ${results[1].latestProduct.section2card1Title || "Signs you need a service"}</h5>
                   <p class="services-section-2-list-content" id="services-section-2-list-content-1-1">
-                  ${result.latestProduct.section2Card1Description || "If your device is slow to boot, crashes unexpectedly, or freezes during basic tasks."}
+                  ${results[1].latestProduct.section2Card1Description || "If your device is slow to boot, crashes unexpectedly, or freezes during basic tasks."}
                   </p>
                 </div>
               </div>
@@ -346,9 +327,9 @@ const API_BASE_URL = "https://1w10dfjm-5000.inc1.devtunnels.ms/"
                 <h4>02</h4>
                 <div class="services-section-2-list-description">
                   <h5 class="services-section-2-list-heading" id="services-section-2-list-heading-1-2">
-                    ${result.latestProduct.section2card2Title || "Signs you need a service"}</h5>
+                    ${results[1].latestProduct.section2card2Title || "Signs you need a service"}</h5>
                   <p class="services-section-2-list-content" id="services-section-2-list-content-1-2">If
-                    ${result.latestProduct.section2Card1Description || "If your system heats up quickly, makes unusual noises, or shuts down during operation."}
+                    ${results[1].latestProduct.section2Card1Description || "If your system heats up quickly, makes unusual noises, or shuts down during operation."}
                   </p>
                 </div>
               </div>
@@ -357,9 +338,9 @@ const API_BASE_URL = "https://1w10dfjm-5000.inc1.devtunnels.ms/"
                 <h4>03</h4>
                 <div class="services-section-2-list-description">
                   <h5 class="services-section-2-list-heading" id="services-section-2-list-heading-1-3">
-                    ${result.latestProduct.section2card3Title || "Signs you need a service"}</h5>
+                    ${results[1].latestProduct.section2card3Title || "Signs you need a service"}</h5>
                   <p class="services-section-2-list-content" id="services-section-2-list-content-1-3">If
-                    ${result.latestProduct.section2Card1Description || "If your laptop or PC takes too long to open applications or shows frequent error messages."}
+                    ${results[1].latestProduct.section2Card1Description || "If your laptop or PC takes too long to open applications or shows frequent error messages."}
                   </p>
                 </div>
               </div>
@@ -367,19 +348,21 @@ const API_BASE_URL = "https://1w10dfjm-5000.inc1.devtunnels.ms/"
             </div>
 
             <div class="services-mian-div-section-2-2-image-div">
-              <img src="${image2}" alt=""
+              <img src="${MainServiceImage2}" alt=""
                 class="services-section-2-image" id="services-section-2-image-1">
             </div>
 
           </div>
         </div>
     `
+      })
+      .catch(error => {
+        console.error('Error loading data:', error);
+        loaderWrapper.style.display = 'none'; // Hide loader even on error
+      });
+  </script>
 
-    console.log("result",result.latestProduct);
-  }
-)
-</script>
-
+  <script src="scripti.js"></script>
 </body>
 
 </html>
